d26 - 2 adding new description value

--- a/Udemy/100 Days Python Learning/D26 - List Comprehension & NATO alphabet/D26 - 2 Check the overlap data on the files.ipynb
+++ b/Udemy/100 Days Python Learning/D26 - List Comprehension & NATO alphabet/D26 - 2 Check the overlap data on the files.ipynb
@@ -59,7 +59,7 @@
     "- `for x in f1` : iterating the files inside *\"file1.txt\"* \n",
     "- `if x in f2` : check the condition when the iterated number from *\"file1.txt\"* is <font color = magenta>***available***</font> the *\"file2.txt\"* \n",
     "- `int(x)`: collecting the value when previous condition is fulfilled then <font color = violet>***convert***</font> it into integer <br>\n",
-    "When the converter is not defined, the result with contain raw text format (`['3\\n', ...]`)"
+    "When the converter is not defined, the result with contain raw text format (`['3\\n', '6\\n' ...]`)"
    ]
   },
   {
