--- a/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 1 GUI & Tkinter.ipynb
+++ b/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 1 GUI & Tkinter.ipynb
@@ -9,43 +9,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aaee35a6-3e61-4e0a-b964-0e58d9ba07a7",
+   "metadata": {},
+   "source": [
+    "## Creating the GUI screen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4243c49c-e2e6-4850-b5a2-67d92791fb90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tkinter as kint\n",
+    "import tkinter\n",
     "\n",
-    "window = kint.Tk()"
+    "window = tkinter.Tk()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e23b45bf-b19c-4c99-9ab5-43b51ce9d78b",
+   "cell_type": "markdown",
+   "id": "ddb56704-9ef3-4285-8b2b-4c2068d18b70",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TclError",
-     "evalue": "can't invoke \"wm\" command: application has been destroyed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTclError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtitle\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTkinter GUI\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\tkinter\\__init__.py:2255\u001b[0m, in \u001b[0;36mWm.wm_title\u001b[1;34m(self, string)\u001b[0m\n\u001b[0;32m   2253\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwm_title\u001b[39m(\u001b[38;5;28mself\u001b[39m, string\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m   2254\u001b[0m     \u001b[38;5;124;03m\"\"\"Set the title of this widget.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 2255\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcall\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mwm\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtitle\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstring\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTclError\u001b[0m: can't invoke \"wm\" command: application has been destroyed"
-     ]
-    }
-   ],
    "source": [
-    "window.title(\"Tkinter GUI\")"
+    "## Providing the Window content"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e23b45bf-b19c-4c99-9ab5-43b51ce9d78b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GUI window title\n",
+    "window.title(\"Tkinter GUI\")\n",
+    "\n",
+    "# adjusting window size\n",
+    "window.minsize(width = 480, height = 640)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e49860c-d79b-47be-9a63-829fd3aba8a0",
+   "metadata": {},
+   "source": [
+    "### Adding the window elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6daadc7c-d453-4fe0-99b9-63c3f567e1b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GUI label\n",
+    "win_lab = tkinter.Label(text=\"GUI label that created using 'tkinter.label'\")  # define the content\n",
+    "win_lab.pack()  # showing the label at the top center inside the windows (default)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bba46ab3-8b42-4ad0-8a94-0cac67544f48",
+   "metadata": {},
+   "source": [
+    "## Script to keep the windows open\n",
+    "- This cell must be keep on the bottom of the code when we define a new script on the windows body\n",
+    "- We will receive this error when we add another code after this ceel <br>\n",
+    "`TclError: can't invoke \"wm\" command: application has been destroyed`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "2428ca67-194f-4b83-866b-ce7a91ef5021",
    "metadata": {},
    "outputs": [],
@@ -53,6 +91,14 @@
     "# keep the windows open\n",
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a696d55-908e-4326-839f-6c570ddf0010",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
