--- a/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 1 GUI & Tkinter.ipynb
+++ b/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 1 GUI & Tkinter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "4243c49c-e2e6-4850-b5a2-67d92791fb90",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "e23b45bf-b19c-4c99-9ab5-43b51ce9d78b",
    "metadata": {},
    "outputs": [],
@@ -60,30 +60,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "6daadc7c-d453-4fe0-99b9-63c3f567e1b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GUI label\n",
-    "win_lab = tkinter.Label(text=\"GUI label that created using 'tkinter.label'\")  # define the content\n",
-    "win_lab.pack()  # showing the label at the top center inside the windows (default)"
+    "\"\"\"GUI label\"\"\"\n",
+    "\n",
+    "# define the content\n",
+    "win_lab = tkinter.Label(text=\"Tkinter GUI Label\", font=(\"Lato\", 24,\"bold\"))\n",
+    "\n",
+    "\"\"\"Showing the label \"\"\"\n",
+    "\n",
+    "# Top center inside the windows (default)\n",
+    "#win_lab.pack()\n",
+    "\n",
+    "# Bottom center inside the windows (default)\n",
+    "win_lab.pack(side=\"bottom\")"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b36653f8",
+   "metadata": {},
+   "source": [
+    "#### `variable.pack()`\n",
+    "Is the function to display any content in the tkinter windows from our script. Without calling or using this function, the content will never displayed at all.\n",
+    "\n",
+    "source: \n",
+    "- [The Packer](https://docs.python.org/3/library/tkinter.html#the-packer)\n",
+    "- [TK Commands > Pack](https://tcl.tk/man/tcl8.6/TkCmd/pack.htm)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bba46ab3-8b42-4ad0-8a94-0cac67544f48",
    "metadata": {},
    "source": [
     "## Script to keep the windows open\n",
     "- This cell must be keep on the bottom of the code when we define a new script on the windows body\n",
-    "- We will receive this error when we add another code after this ceel <br>\n",
+    "- We will receive this error when we add another code after this cell <br>\n",
     "`TclError: can't invoke \"wm\" command: application has been destroyed`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "2428ca67-194f-4b83-866b-ce7a91ef5021",
    "metadata": {},
    "outputs": [],
@@ -91,19 +115,11 @@
     "# keep the windows open\n",
     "window.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a696d55-908e-4326-839f-6c570ddf0010",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -118,6 +134,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c19755229f92828ed9983117e2a7f8a1cac6c8656c17c4590448400be61caf74"
+   }
   }
  },
  "nbformat": 4,
