adding more details on the written code

--- a/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 1 GUI & Tkinter.ipynb
+++ b/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 1 GUI & Tkinter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "4243c49c-e2e6-4850-b5a2-67d92791fb90",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,15 @@
     "import tkinter\n",
     "\n",
     "window = tkinter.Tk()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e9607aa5",
+   "metadata": {},
+   "source": [
+    "creates a window object using the `Tk()` function, which is a constructor of the `tkinter` class."
    ]
   },
   {
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "e23b45bf-b19c-4c99-9ab5-43b51ce9d78b",
    "metadata": {},
    "outputs": [],
@@ -51,6 +60,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6f27aacf",
+   "metadata": {},
+   "source": [
+    "- `window.title(\"Tkinter GUI\")`: Sets the title of the window to `\"Tkinter GUI\"` using the `title()` method. This title will be displayed in the title bar of the window.\n",
+    "- `window.minsize(width = 480, height = 640)`: sets the minimum size of the window to `width = 480` and `height = 640` using the `minsize()` method. This means that the ***user will not be able*** to resize the window to be smaller than these dimensions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1e49860c-d79b-47be-9a63-829fd3aba8a0",
    "metadata": {},
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "6daadc7c-d453-4fe0-99b9-63c3f567e1b3",
    "metadata": {},
    "outputs": [],
@@ -68,7 +87,7 @@
     "\"\"\"GUI label\"\"\"\n",
     "\n",
     "# define the content\n",
-    "win_lab = tkinter.Label(text=\"Tkinter GUI Label\", font=(\"Lato\", 24,\"bold\"))\n",
+    "win_lab = tkinter.Label(text=\"Tkinter GUI Label\", font=(\"Century Gothic\", 24,\"bold\"))\n",
     "\n",
     "\"\"\"Showing the label \"\"\"\n",
     "\n",
@@ -77,6 +96,17 @@
     "\n",
     "# Bottom center inside the windows (default)\n",
     "win_lab.pack(side=\"bottom\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "33b19a8b",
+   "metadata": {},
+   "source": [
+    "- The first line creates a label widget object called `win_lab` and sets its text to ***\"Tkinter GUI Label\"***, font to ***\"Century Gothic\"***, size to ***24*** and font style to ***\"bold\"*** using the `Label()` function, which is a constructor of the `tkinter.Label class`.\n",
+    "- The second line adds the label widget to the window using the `pack()` method, which is a geometry manager that organizes widgets in blocks before placing them in the parent widget. *Without specifying any options*, it adds the widget to the ***top-left corner*** of the parent widget.\n",
+    "- The third line adds the same label widget again to the window, this time specifying that ***it should be placed at the bottom of the window*** using the `pack()` method and passing the option `\"side\"` with the value `\"bottom\"`."
    ]
   },
   {
@@ -107,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "2428ca67-194f-4b83-866b-ce7a91ef5021",
    "metadata": {},
    "outputs": [],
