compiling advanced widget

--- a/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 5 Tkinter Advanced widget.ipynb
+++ b/Udemy/100 Days Python Learning/D27 - Gui, Tkinter, args & kwargs/D27 - 5 Tkinter Advanced widget.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,17 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type your text\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating the textbox widget\n",
     "textbox = Entry(width=25)\n",
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,23 +229,332 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Spinbox Widget"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Spinbox Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hit_spin():\n",
+    "    print(f'spin_box position: {spin_box.get()}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Explanation:\n",
+    "The `hit_spin()` function is a simple function that is called when the value of the Spinbox widget changes. The function retrieves the current value of the Spinbox using the `get()` method and prints it to the console.\n",
+    "\n",
+    "Parameters\n",
+    "This function does not take any parameters.\n",
+    "\n",
+    "Return Value\n",
+    "This function does not return any value."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Displaying the spinbox widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spin_box = Spinbox(from_=0, to=10, width=5, command=hit_spin)\n",
+    "spin_box.pack()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters\n",
+    "- `from_`: The lower limit of the range of values. This parameter is required.\n",
+    "- `to`: The upper limit of the range of values. This parameter is required.\n",
+    "- `width`: The width of the Spinbox widget. This parameter is optional and defaults to the width of the current font.\n",
+    "- `command`: The function to be called when the value of the Spinbox is changed. This parameter is optional.\n",
+    "\n",
+    "Return Value\n",
+    "The Spinbox widget returns the current value selected by the user."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scale-Bar Widget"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scalebar Slider Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scale_pos(value):  # Called with current scale value.\n",
+    "    print(f'scale_pos: {value}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Displaying scalebar Widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale = Scale(from_=0, to=100, command=scale_pos)\n",
+    "scale.pack()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checkbutton Widget"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check button function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_interact():\n",
+    "    if check_state.get() == 1:\n",
+    "        print(\"check_state: True\")\n",
+    "    else:\n",
+    "        print(\"check_state: False\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Explanation:\n",
+    "The function checks the current state of a Checkbutton widget and prints a message depending on whether the button is checked or not."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Displaying check button widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_state = IntVar()  # variable to store checked state, 0 is off, 1 is on.\n",
+    "checkbutton = Checkbutton(text=\"Marked ?\", variable=check_state, command=check_interact)\n",
+    "check_state.get()\n",
+    "checkbutton.pack()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation:\n",
+    "\n",
+    "Input: \n",
+    "- No specific input, but it creates an IntVar object named check_state and a Checkbutton widget using the tkinter library.\n",
+    "\n",
+    "Output:\n",
+    "- A Checkbutton widget with text *\"Marked ?\"* and a variable `check_state` that stores the current state of the Checkbutton *(0 for unchecked, 1 for checked).*\n",
+    "\n",
+    "Functionality:\n",
+    "- This code creates a Checkbutton widget that can be used to toggle a value between 0 and 1 (unchecked and checked).\n",
+    "- The function check_interact is defined to print a message depending on the state of the Checkbutton when it is clicked.\n",
+    "- The command argument of the Checkbutton constructor is set to check_interact, so that the check_interact function is called whenever the Checkbutton is clicked.\n",
+    "- The initial state of the Checkbutton is unchecked (0) because the check_state variable is initialized to 0 by default"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Radio Button Widget"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Radio Button Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def radio_interact():\n",
+    "    print(f'radio_state = \"Option{radio_state.get()}\"')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Displaying Radio Button widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radio_state = IntVar()\n",
+    "radiobutton1 = Radiobutton(text=\"Option1\", value=1, variable=radio_state, command=radio_interact)\n",
+    "radiobutton2 = Radiobutton(text=\"Option2\", value=2, variable=radio_state, command=radio_interact)\n",
+    "radiobutton1.pack()\n",
+    "radiobutton2.pack()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation\n",
+    "\n",
+    "- Function `radio_interact()` prints out a string that displays the selected radio button option.\n",
+    "- `IntVar()` is used to create a `Tkinter` variable to store the state of the radio button.\n",
+    "- `Radiobutton` creates a radio button with the specified text and value, and associates it with the radio_state variable.\n",
+    "- The `command` option is used to associate the radio button with the `radio_interact()` function, which is called whenever a radio button is clicked.\n",
+    "\n",
+    "Finally, both radio buttons are packed onto the GUI using the `pack()` method."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Listboxes widget"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Listboxes Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def listbox_used(event):\n",
+    "    print(f'selected_item: {contents.get(contents.curselection())}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Displaying Listboxes Widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contents = Listbox(height=4)\n",
+    "fruits = [\"Apple\", \"Pear\", \"Orange\", \"Banana\"]\n",
+    "for item in fruits:\n",
+    "    contents.insert(fruits.index(item), item)\n",
+    "contents.bind(\"<<ListboxSelect>>\", listbox_used)\n",
+    "contents.pack()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The scripts create a `Listbox` widget that displays a list of fruits. When an item in the list is selected, the `listbox_used` function is called and prints the *selected item* to the console.\n",
+    "\n",
+    "The `Listbox` widget is created and initialized with a `height` attribute of 4. The `fruits` list is iterated over and each item is inserted into the Listbox using its index. The `bind` method is called on the `Listbox`, which binds the \"<<ListboxSelect>>\" event to the `listbox_used` function. Finally, the `Listbox` is packed into the GUI.\n",
+    "\n",
+    "The `listbox_used` function takes an event parameter which is passed automatically when the event is triggered. This function uses the `curselection()` method *to get the index of the selected item in the Listbox*, and the `get()` method *to retrieve the value of the selected item*. The selected item value is then printed to the console."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Keeping The GUI appearance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hit Button Clicked\n",
-      "Hit Button Clicked\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gui.mainloop()"
    ]
